--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
             <h1>Search Wikipedia</h1>
             <form action="#" method="get" id="form">
                 <input type="search" name="search" id="wikiSearch">
-                <button id="searchBtn"><i class="fa fa-search" aria-hidden="true"></i></button>
+                <button id="searchBtn" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
         </div>
+
+        <!-- What should happen when the search button gets pressed? -->
+        <!-- Change the position of .search div to top 20px and transform it on top smoothly -->
+        <!-- Add a second div which contains all the found articles and style it -->
+
     </div>
 </body>
 </html>
